--- a/apps/docs/src/pages/components/loading-container.mdx
+++ b/apps/docs/src/pages/components/loading-container.mdx
@@ -14,7 +14,7 @@ export const getStaticProps = async ({ params }) => {
     "core",
     loadingContainerClasses,
   );
-  return { props: { ssg: { meta: meta } } };
+  return { props: { ssg: { meta } } };
 };
 
 <Description />
