--- a/apps/docs/src/pages/components/accordion.mdx
+++ b/apps/docs/src/pages/components/accordion.mdx
@@ -13,7 +13,7 @@ import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData("Accordion", "core", accordionClasses);
-  return { props: { ssg: { meta: meta } } };
+  return { props: { ssg: { meta } } };
 };
 
 <Description />
@@ -50,7 +50,7 @@ export const getStaticProps = async ({ params }) => {
 
 You can control the state of `HvAccordion` by using the `expanded`/`onChange` props.
 
-```jsx live
+```tsx live
 import { useState } from "react";
 
 export default function Demo() {
@@ -78,7 +78,7 @@ export default function Demo() {
 
 If you need an accordion group, you can use multiple `HvAccordion` components.
 
-```jsx live
+```tsx live
 <div className="w-full flex flex-col w-1/2">
   <HvTypography className="pb-1" variant="title3">
     UI Kit
