--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -7,7 +7,7 @@ import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData("Avatar", "core", avatarClasses);
-  return { props: { ssg: { meta: meta } } };
+  return { props: { ssg: { meta } } };
 };
 
 <Description />
@@ -41,7 +41,7 @@ export const getStaticProps = async ({ params }) => {
 
 Image avatars can be created by passing the src or srcSet props to the component.
 
-```jsx live
+```tsx live
 <>
   <HvAvatar alt="Ben" src="https://i.imgur.com/56Eeg1g.png" />
   <HvAvatar alt="Beatrice" src="https://i.imgur.com/bE7vg3N.png" />
@@ -54,7 +54,7 @@ Image avatars can be created by passing the src or srcSet props to the component
 
 Avatars containing simple characters can be created by passing a string as children.
 
-```jsx live
+```tsx live
 <>
   <HvAvatar>BM</HvAvatar>
   <HvAvatar backgroundColor="sema19">W</HvAvatar>
@@ -66,7 +66,7 @@ Avatars containing simple characters can be created by passing a string as child
 
 Icon avatars are created by passing an icon as children. Its size and color aren't Avatar's responsibility.
 
-```jsx live
+```tsx live
 <>
   <HvAvatar>
     <LogIn color="atmo1" iconSize="XS" />
@@ -87,7 +87,7 @@ Icon avatars are created by passing an icon as children. Its size and color aren
 
 If there is an error loading the avatar image, the component falls back to an alternative in the following order: the provided children, the first letter of the alt text and finally the generic User icon.
 
-```jsx live
+```tsx live
 <>
   <HvAvatar alt="Clara Soul" src="/broken-image.jpg">
     CS
@@ -101,7 +101,7 @@ If there is an error loading the avatar image, the component falls back to an al
 
 You can configure the `size` and `variant` of an avatar. When using an icon, set its `iconSize` to the size immediately below the avatar size.
 
-```jsx live
+```tsx live
 <>
   <HvAvatar size="xs" />
   <HvAvatar size="xs" variant="square" />
@@ -125,7 +125,7 @@ You can configure the `size` and `variant` of an avatar. When using an icon, set
 
 An avatar can have a status, represented by either the status colored border or by the badge dot. The color can be from the theme palette or custom.
 
-```jsx live
+```tsx live
 <>
   <HvAvatar size="xs" status="positive">
     AB
@@ -149,7 +149,7 @@ An avatar can have a status, represented by either the status colored border or 
 
 An avatar should be interacted with by wrapping it in an interactable element, such as an `HvButton` or a link. Make sure the elements are labelled accordingly.
 
-```jsx live
+```tsx live
 <>
   <HvButton
     icon
