--- a/apps/docs/src/pages/components/overflow-tooltip.mdx
+++ b/apps/docs/src/pages/components/overflow-tooltip.mdx
@@ -15,7 +15,7 @@ export const getStaticProps = async ({ params }) => {
     "core",
     overflowTooltipClasses,
   );
-  return { props: { ssg: { meta: meta } } };
+  return { props: { ssg: { meta } } };
 };
 
 <Description />
