--- a/apps/docs/src/pages/components/skeleton.mdx
+++ b/apps/docs/src/pages/components/skeleton.mdx
@@ -13,7 +13,7 @@ import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData("Skeleton", "core", skeletonClasses);
-  return { props: { ssg: { meta: meta } } };
+  return { props: { ssg: { meta } } };
 };
 
 <Description />
